// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Modal renders a Blank Modal 1`] = `
<Portal
  beforeClose={[Function]}
  closeOnEsc={true}
  closeOnOutsideClick={true}
  onClose={[Function]}
  onOpen={[Function]}
  openByClickOn={
    <button>
      Open
    </button>
  }
>
  <div
    aria-hidden={false}
    className="uk-modal"
    onClick={[Function]}
    style={
      Object {
        "display": "block",
      }
    }
  >
    <div
      className="uk-modal-dialog uk-modal-dialog-blank"
      onClick={[Function]}
    >
      <a
        className="uk-modal-close uk-close"
        onClick={[Function]}
      />
      
      
      <div
        className="uk-modal-body"
      >
        <div
          className="uk-grid uk-flex-middle"
        >
          <div
            className="uk-width-medium-1-2 uk-height-viewport uk-cover-background uk-row-first"
            style={
              Object {
                "backgroundImage": "url(http://getuikit.com/docs/images/placeholder_120x255.svg)",
              }
            }
          />
          <div
            className="uk-width-medium-1-2"
          >
            <h1>
              Headline
            </h1>
            <div
              className="uk-width-medium-1-3"
            >
              <p>
                Lorem ipsum
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</Portal>
`;

exports[`Modal renders a Caption 1`] = `
<Portal
  beforeClose={[Function]}
  closeOnEsc={true}
  closeOnOutsideClick={true}
  onClose={[Function]}
  onOpen={[Function]}
  openByClickOn={
    <button>
      Open
    </button>
  }
>
  <div
    aria-hidden={false}
    className="uk-modal"
    onClick={[Function]}
    style={
      Object {
        "display": "block",
      }
    }
  >
    <div
      className="uk-modal-dialog"
      onClick={[Function]}
    >
      <a
        className="uk-modal-close uk-close"
        onClick={[Function]}
      />
      
      <div
        className="uk-modal-caption"
      >
        Caption
      </div>
      <div
        className="uk-modal-body"
      >
        Lorem ipsum
      </div>
    </div>
  </div>
</Portal>
`;

exports[`Modal renders a Header and Footer 1`] = `
<Portal
  beforeClose={[Function]}
  closeOnEsc={true}
  closeOnOutsideClick={true}
  onClose={[Function]}
  onOpen={[Function]}
  openByClickOn={
    <button>
      Open
    </button>
  }
>
  <div
    aria-hidden={false}
    className="uk-modal"
    onClick={[Function]}
    style={
      Object {
        "display": "block",
      }
    }
  >
    <div
      className="uk-modal-dialog"
      onClick={[Function]}
    >
      <a
        className="uk-modal-close uk-close"
        onClick={[Function]}
      />
      <div
        className="uk-modal-header"
      >
        <h2>
          Headline
        </h2>
      </div>
      
      <div
        className="uk-modal-body"
      >
        Lorem ipsum
      </div>
      <div
        className="uk-modal-footer uk-text-right"
      >
        <button
          onClick={[Function]}
        >
          Yes!
        </button>
      </div>
    </div>
  </div>
</Portal>
`;

exports[`Modal renders a Lightbox 1`] = `
<Portal
  beforeClose={[Function]}
  closeOnEsc={true}
  closeOnOutsideClick={true}
  onClose={[Function]}
  onOpen={[Function]}
  openByClickOn={
    <button>
      Open
    </button>
  }
>
  <div
    aria-hidden={false}
    className="uk-modal"
    onClick={[Function]}
    style={
      Object {
        "display": "block",
      }
    }
  >
    <div
      className="uk-modal-dialog uk-modal-dialog-lightbox"
      onClick={[Function]}
    >
      <a
        className="uk-modal-close uk-close uk-close-alt"
        onClick={[Function]}
      />
      
      
      <div
        className="uk-modal-body"
      >
        <img
          alt=""
          role="presentation"
          src="http://getuikit.com/docs/images/placeholder_600x400.svg"
        />
      </div>
    </div>
  </div>
</Portal>
`;

exports[`Modal renders a Spinner 1`] = `
<Portal
  beforeClose={[Function]}
  closeOnEsc={true}
  closeOnOutsideClick={true}
  onClose={[Function]}
  onOpen={[Function]}
  openByClickOn={
    <button>
      Open
    </button>
  }
>
  <div
    aria-hidden={false}
    className="uk-modal"
    onClick={[Function]}
    style={
      Object {
        "display": "block",
      }
    }
  >
    <div
      className="uk-modal-dialog"
      onClick={[Function]}
    >
      
      
      <div
        className="uk-modal-body"
      >
        <div
          className="uk-modal-spinner"
        />
      </div>
    </div>
  </div>
</Portal>
`;

exports[`Modal renders an alert modal 1`] = `
<Portal
  beforeClose={[Function]}
  closeOnEsc={true}
  closeOnOutsideClick={true}
  onClose={[Function]}
  onOpen={[Function]}
  openByClickOn={
    <button>
      Open
    </button>
  }
>
  <div
    aria-hidden={false}
    className="uk-modal"
    onClick={false}
    style={
      Object {
        "display": "block",
      }
    }
  >
    <div
      className="uk-modal-dialog"
      onClick={[Function]}
    >
      
      
      <div
        className="uk-modal-body"
      >
        Something bad happened!
      </div>
      <div
        className="uk-modal-footer uk-text-right"
      >
        <button
          className="uk-button uk-button-primary"
          onClick={[Function]}
          type="button"
        >
          Ok
        </button>
      </div>
    </div>
  </div>
</Portal>
`;

exports[`Modal renders an confirm modal 1`] = `
<Portal
  beforeClose={[Function]}
  closeOnEsc={true}
  closeOnOutsideClick={true}
  onClose={[Function]}
  onOpen={[Function]}
  openByClickOn={
    <button>
      Open
    </button>
  }
>
  <div
    aria-hidden={false}
    className="uk-modal"
    onClick={false}
    style={
      Object {
        "display": "block",
      }
    }
  >
    <div
      className="uk-modal-dialog"
      onClick={[Function]}
    >
      
      
      <div
        className="uk-modal-body"
      >
        Are you absolutely sure about this?
      </div>
      <div
        className="uk-modal-footer uk-text-right"
      >
        <button
          className="uk-button"
          onClick={[Function]}
          type="button"
        >
          Cancel
        </button>
        <span>
           
        </span>
        <button
          className="uk-button uk-button-primary"
          onClick={[Function]}
          type="button"
        >
          Ok
        </button>
      </div>
    </div>
  </div>
</Portal>
`;

exports[`Modal renders an prompt modal 1`] = `
<Portal
  beforeClose={[Function]}
  closeOnEsc={true}
  closeOnOutsideClick={true}
  onClose={[Function]}
  onOpen={[Function]}
  openByClickOn={
    <button>
      Open
    </button>
  }
>
  <div
    aria-hidden={false}
    className="uk-modal"
    onClick={false}
    style={
      Object {
        "display": "block",
      }
    }
  >
    <div
      className="uk-modal-dialog"
      onClick={[Function]}
    >
      
      
      <div
        className="uk-modal-body"
      >
        <div
          className="uk-margin-small-top uk-modal-content uk-form"
        >
          <p>
            <input
              className="uk-width-1-1"
              type="text"
            />
          </p>
        </div>
      </div>
      <div
        className="uk-modal-footer uk-text-right"
      >
        <button
          className="uk-button"
          onClick={[Function]}
          type="button"
        >
          Cancel
        </button>
        <span>
           
        </span>
        <button
          className="uk-button uk-button-primary"
          onClick={[Function]}
          type="button"
        >
          Ok
        </button>
      </div>
    </div>
  </div>
</Portal>
`;

exports[`Modal renders correctly 1`] = `
<Portal
  beforeClose={[Function]}
  closeOnEsc={true}
  closeOnOutsideClick={true}
  onClose={[Function]}
  onOpen={[Function]}
  openByClickOn={
    <button>
      Open
    </button>
  }
>
  <div
    aria-hidden={false}
    className="uk-modal"
    onClick={[Function]}
    style={
      Object {
        "display": "block",
      }
    }
  >
    <div
      className="uk-modal-dialog"
      onClick={[Function]}
    >
      <a
        className="uk-modal-close uk-close"
        onClick={[Function]}
      />
      
      
      <div
        className="uk-modal-body"
      >
        Lorem ipsum
      </div>
    </div>
  </div>
</Portal>
`;
